--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Dynamic_MS"
         tools:targetApi="31">
         <activity
+            android:name=".HealthCenterRecords"
+            android:exported="false" />
+        <activity
             android:name=".MonthlySummary"
             android:exported="false">
             <meta-data
