--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         <activity
             android:name=".model.HealthCenterRecord"
             android:exported="false" />
+
+        <activity
+            android:name=".HealthCenterRecords"
+            android:exported="false" />
+
         <activity
             android:name=".MonthlySummary"
             android:exported="false">
